# django_starter

./: .env.example  .gitignore  package.json  pyproject.toml  requirements.txt  run.py  vite.config.ts
__assets__/js/: main.ts
background_tasks/: admin.py  huey.py  models.py  tasks.py
background_tasks/mail/: backends.py
background_tasks/migrations/: 0001_initial.py  0002_remove_kv_pk_kv_id_kv_is_result_kv_kv_queue_key.py
config/: settings.py  urls.py
core/: forms.py
core/clients/: minio.py
core/management/commands/: backup_database.py
core/middleware/: file_server.py
core/templates/core/components/: pagination.html
core/templates/core/components/forms/: as_div.html
core/templates/core/layouts/: base.html
core/templatetags/: pagination.py
demoapp/: forms.py  models.py  tasks.py  urls.py  views.py
demoapp/migrations/: 0001_initial.py
demoapp/templates/demoapp/layouts/: base.html
demoapp/templates/demoapp/pages/: homepage.html  long_running.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/layouts/: guest.html
users/templates/users/pages/: login.html  register.html
