[project]
name = "django-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.5",
    "django-debug-toolbar>=6.0.0",
    "django-vite>=3.1.0",
    "huey>=2.5.3",
    "python-dotenv>=1.1.1",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
]
